bazel_dep(name = "rules_proto", version = "6.0.0-rc2")
bazel_dep(name = "rules_go", version = "0.46.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.34.0")
bazel_dep(name = "protobuf", version = "23.1", repo_name = "com_google_protobuf")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "org_golang_x_sys",
    "com_github_jaschaephraim_lrserver",
    "org_golang_google_protobuf",
    "com_github_golang_protobuf",
    "com_github_fsnotify_fsevents",
    "com_github_fsnotify_fsnotify",
    "com_github_mattn_go_shellwords",
    "com_github_gorilla_websocket",
    "com_github_google_go_cmp",
)
